--- a/backend - copia/package.json
+++ b/backend - copia/package.json
@@ -7,7 +7,7 @@
     "test": "tests"
   },
   "scripts": {
-    "start": "node --watch src/server.js",
+    "start": "node --watch server.js",
     "test": "jest --forceExit",
     "test:watch": "jest --watch"
   },
